Make lower-level tests pass
This continues the work on normalizable shadow attributes represented
as PolyStrings. Major changes:

1. Strictly differentiating between checking shadows obtained from the
repository and via provisioning (in tests). The former may have
PolyString attributes, whereas the latter have the same schema as
on resource.

2. Differentiating between repo and non-repo shadow deltas
in provisioning-impl (see RepoShadowModifications class).

3. Fixed some recently-introduced and older bugs in provisioning-impl.

This makes tests up to model-impl pass, currently only with the native
repository. Work in progress.

Related to MID-2119 (shadow caching).

See also 2d85325d114f85824752dd8aec0a2a7ad09d762d (prism).